zoom issue on mobile view resolved

--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -83,7 +83,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 5%;
+    padding: 10% 5% 5% 5%;
     height: 20vh;
     // width: 10%;
   }
